<resources>
    <string name="app_name">My Application</string>
    <string name="email_text">Introduzca tu email</string>
    <string name="usuario_text">Nombre de usuario</string>
    <string name="password_text">Introduzca su contraseña</string>
    <string name="usuarioregistrado">Usuario</string>
    <string name="passwordregistrado">Contraseña</string>
    <string name="main_informacion">Información</string>
    <string name="main_personajes">Personajes</string>
    <string name="lanzar_juego">Jugar</string>
    <string name="exit">Exit</string>
    <string name="texto">Aqui esta el texto de informacion sobre el juego, como la version, algunas reglas, etc</string>
    <string name="texto2">Se podrá jugar al juego en la siguiente versión</string>
    <string name="main_menu">Menu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="lanzar_ranking">Ranking</string>
    <string name="repassword_text">Introduzca su contraseña de nuevo</string>
</resources>